<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/pays_view_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/pays_name" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/view_pays_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    tools:text="France" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/pays_region" />

                <Space
                    android:layout_width="209dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/view_pays_region_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    tools:text="Europe" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/pays_capital" />

                <Space
                    android:layout_width="209dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/view_pays_capital_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    tools:text="Paris" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/pays_currency" />

                <Space
                    android:layout_width="209dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/view_pays_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    tools:text="Euro" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/pays_flag" />

            <ImageView
                android:id="@+id/view_pays_flag_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>